riscv: dts: thead: mark devices as dma-noncoherent
RISC-V platform is assumed to be coherent by default. All the
non-coherent devices should be marked accordingly in dts file.
DMA capable devices on T-Head board can allocate buffers only
from the cached memory. So mark all the devices on simple-bus
as non-coherent to make sure that dma sync operations are used.

Signed-off-by: Sergey Matyukevich <geomatsi@gmail.com>

--- a/arch/riscv/boot/dts/thead/ice.dts
+++ b/arch/riscv/boot/dts/thead/ice.dts
@@ -65,6 +65,7 @@
 		#address-cells = <2>;
 		#size-cells = <2>;
 		compatible = "simple-bus";
+		dma-noncoherent;
 		ranges;
 
 		reset: reset-sample {
